// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InstrumentDiagram 96-channel GEN1 renders correctly 1`] = `
.c0 {
  min-width: 0;
}

<div
  className="c0"
>
  <img
    className=""
    src="ninety-six-channel-gen1.png"
  />
</div>
`;

exports[`InstrumentDiagram Multi-channel GEN2 renders correctly 1`] = `
.c0 {
  min-width: 0;
  -webkit-transform: scaleX(-1);
  -ms-transform: scaleX(-1);
  transform: scaleX(-1);
  -webkit-filter: FlipH;
  filter: FlipH;
}

<div
  className="c0"
>
  <img
    className=""
    src="multi-channel_GEN2_800px.png"
  />
</div>
`;

exports[`InstrumentDiagram Multi-channel renders correctly 1`] = `
.c0 {
  min-width: 0;
}

<div
  className="c0"
>
  <img
    className=""
    src="multi-channel_GEN1_800px.png"
  />
</div>
`;

exports[`InstrumentDiagram Single-channel GEN2 renders correctly 1`] = `
.c0 {
  min-width: 0;
  -webkit-transform: scaleX(-1);
  -ms-transform: scaleX(-1);
  transform: scaleX(-1);
  -webkit-filter: FlipH;
  filter: FlipH;
}

<div
  className="c0"
>
  <img
    className=""
    src="single-channel_GEN2_800px.png"
  />
</div>
`;

exports[`InstrumentDiagram Single-channel renders correctly 1`] = `
.c0 {
  min-width: 0;
}

<div
  className="c0"
>
  <img
    className=""
    src="single_channel_GEN1_800px.png"
  />
</div>
`;

exports[`InstrumentDiagram eight-channel GEN3 renders correctly 1`] = `
.c0 {
  min-width: 0;
  -webkit-transform: scaleX(-1);
  -ms-transform: scaleX(-1);
  transform: scaleX(-1);
  -webkit-filter: FlipH;
  filter: FlipH;
}

<div
  className="c0"
>
  <img
    className=""
    src="eight-channel-gen3.png"
  />
</div>
`;

exports[`InstrumentDiagram single-channel GEN3 renders correctly 1`] = `
.c0 {
  min-width: 0;
  -webkit-transform: scaleX(-1);
  -ms-transform: scaleX(-1);
  transform: scaleX(-1);
  -webkit-filter: FlipH;
  filter: FlipH;
}

<div
  className="c0"
>
  <img
    className=""
    src="single-channel-gen3.png"
  />
</div>
`;

exports[`InstrumentGroup Renders correctly 1`] = `
.c2 {
  min-width: 0;
}

.c3 {
  min-width: 0;
  -webkit-transform: scaleX(-1);
  -ms-transform: scaleX(-1);
  transform: scaleX(-1);
  -webkit-filter: FlipH;
  filter: FlipH;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  grid-gap: 1rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<section
  className="pipette_group"
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div>
        <h2
          className="title"
        >
          pipette
        </h2>
        <span
          className="value"
        >
          p300 8-Channel
        </span>
      </div>
    </div>
    <div
      className="c2 pipette_icon"
    >
      <img
        className=""
        src="multi-channel_GEN1_800px.png"
      />
    </div>
  </div>
  <div
    className="c0"
  >
    <div
      className="c3 pipette_icon"
    >
      <img
        className=""
        src="single_channel_GEN1_800px.png"
      />
    </div>
    <div
      className="c1"
    >
      <div>
        <h2
          className="title"
        >
          pipette
        </h2>
        <span
          className="value"
        >
          p10 Single
        </span>
      </div>
    </div>
  </div>
</section>
`;
